# Doodle_JUMP_SFML

./: CMakeLists.txt
headers/: BasePlatform.hpp  Doodle.hpp  Menu.hpp  MovablePlatform.hpp  MovablePlatforms.hpp  Obstacle.hpp  Platforms.hpp  StaticPlatform.hpp  StaticPlatforms.hpp
src/: Application.cpp  Doodle.cpp  Menu.cpp  MovablePlatform.cpp  MovablePlatforms.cpp  Obstacle.cpp  Platforms.cpp  StaticPlatform.cpp  StaticPlatforms.cpp
